remplacement du include

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -57,7 +57,7 @@
                         <h2>Un transport sanitaire disponible pour toutes vos urgences</h2>
                     </div>
                     <div class="col-sm-6 fadeInRight animated">
-                        {% include pre-devis.html %}
+                        {% include devis.html %}
                     </div>
                 </div>
             </div>
