--- a/src/_includes/pre-devis2.html
+++ b/src/_includes/pre-devis2.html
@@ -1,3 +1,41 @@
-<div class="pre-devis">
-  <p>Contenu du devis ici...</p>
-</div>
+<form action="">
+    <div class=" col-sm-12 ">
+        <div class="row pad1">
+          <div class="col-sm-3 nopadleft">
+            <div class="form-group has-feedback">
+              <input type="text" class="form-control " id="nom" name="nom"
+                placeholder="Nom">
+            </div>
+          </div>
+
+            <div class="col-sm-3">
+              <div class="form-group has-feedback">
+      
+              <input type="text" class="form-control " id="email" name="email"
+                placeholder="Mail">
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="form-group has-feedback">
+              <input type="text" class="form-control " id="telephone" name="telephone"
+                 placeholder="Téléphone">
+              </div>
+            </div>
+      
+      
+            <div class="col-sm-3">
+              <div class="form-group has-feedback">
+              <select class="form-control" id="prestation" name="prestation">
+                <option value="Prestations">Prestations</option>
+                <option value="Transport Assis Professionnalisé">Transport Assis Professionnalisé</option>
+                <option value="Transfert Médicaux">Transfert Médicaux</option>
+                <option value="Transport sanitaires">Transport sanitaires</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 text-center">
+        <button type='submit' name="devis" class='button'><span>Envoyer</span> </button>
+      </div>
+</form>
