--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Lato:400,700&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/style.css"> -->
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/style.css">
     <link rel="icon" href="{{site.baseurl}}/assets/img/favicon.png" type="image/x-icon" />
     <script defer src="{{site.baseurl}}/assets/js/jquery-3.3.1.slim.min.js"></script>
     <script defer src="{{site.baseurl}}/assets/js/popper.min.js"></script>
