--- a/src/_includes/javascript-bottom.html
+++ b/src/_includes/javascript-bottom.html
@@ -1,12 +1,12 @@
 <!-- Base Scripts -->
-<script src="{{ site.baseurl }}/assets/js/jquery-1.11.0.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
+<script src="./assets/js/jquery-1.11.0.min.js"></script>
+<script src="./assets/js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/24b7f338c4.js"></script>
 
 {% if page.url == '/devis/' or page.url == '/' %}
-	<script src="{{ site.baseurl }}/assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-  	<script src="{{ site.baseurl }}/assets/js/clockpicker.js" type="text/javascript"></script>
-	<script src="{{ site.baseurl }}/assets/js/datepicker-locales/bootstrap-datepicker.fr.js" type="text/javascript"></script>
+	<script src="./assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+  	<script src="./assets/js/clockpicker.js" type="text/javascript"></script>
+	<script src="./assets/js/datepicker-locales/bootstrap-datepicker.fr.js" type="text/javascript"></script>
 	<script>
 		$(document).ready(function() {
 			$('.bootstrap-datepicker input').datepicker({
@@ -28,7 +28,7 @@
 {% endif %}
 
 {% if page.url == '/galerie/' or page.url contains '/album-' or page.url contains '/product-' %}
-	<script src="{{ site.baseurl }}/assets/js/lightbox-2.6.min.js" type="text/javascript"></script>
+	<script src="./assets/js/lightbox-2.6.min.js" type="text/javascript"></script>
 {% endif %}
 
 <!-- Google Analytics -->
@@ -64,7 +64,7 @@
 	</script>
 {% endif %}
 
-<script type="text/javascript" src="{{ site.baseurl }}/assets/js/bxslider.min.js"></script>
+<script type="text/javascript" src="./assets/js/bxslider.min.js"></script>
 <script type="text/javascript">
 	// Utilisation de l'API MediaQueryList moderne
 	if (window.matchMedia) {
