--- a/src/_includes/navbar.html
+++ b/src/_includes/navbar.html
@@ -14,23 +14,23 @@
               
 
               <li>
-                <a class="{% if page.url == '/notre-entreprise/' %}active{% endif %}" href="{{ site.baseurl }}/notre-entreprise/">   Notre entreprise  </a>
+                <a class="{% if page.url == '/notre-entreprise' %}active{% endif %}" href="{{ site.baseurl }}/notre-entreprise">   Notre entreprise  </a>
               </li>
 
               <li>
-                <a class="{% if page.url == '/nos-services/' %}active{% endif %}" href="{{ site.baseurl }}/nos-services/">   Nos services  </a>
+                <a class="{% if page.url == '/nos-services' %}active{% endif %}" href="{{ site.baseurl }}/nos-services">   Nos services  </a>
               </li>
 
               <li>
-                <a class="{% if page.url == '/zone-d-intervention/' %}active{% endif %}" href="{{ site.baseurl }}/zone-d-intervention/"> Zone d'intervention </a>
+                <a class="{% if page.url == '/zone-d-intervention' %}active{% endif %}" href="{{ site.baseurl }}/zone-d-intervention"> Zone d'intervention </a>
               </li>
               
               <li>
-                <a class="{% if page.url == '/contact/' %}active{% endif %}" href="{{ site.baseurl }}/contact/"> Nous contacter  </a>
+                <a class="{% if page.url == '/contact' %}active{% endif %}" href="{{ site.baseurl }}/contact"> Nous contacter  </a>
               </li>
 
               <li class="devis">
-                <a class="{% if page.url == '/reservation/' %}active{% endif %} button" href="{{ site.baseurl }}/reservation/">Réserver en ligne </a>
+                <a class="{% if page.url == '/reservation' %}active{% endif %} button" href="{{ site.baseurl }}/reservation">Réserver en ligne </a>
               </li>
                 
              <!--  <li class=" hidden-xs "><a href="tel:<?=$call_phone1?>" class="button-phone"><i class="fa fa-phone" aria-hidden="true"></i> <?=$conf_phone1?></a>
